Fix overlapping elements on resizing

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ header {
   padding: 6% 6%;
   background: url('./images/header-shapes-mobile.svg') 0 50px no-repeat;
   background-size: 100% auto;
-  height: 660px;
+
   border-bottom-left-radius: 10% 10%;
   background-color: #fff;
   width: 100%;
@@ -344,6 +344,8 @@ div {
   margin-top: 1rem;
   width: 70%;
   text-align: left;
+  margin-bottom: 0.3;
+ 
 }
 
 .link-text {
@@ -840,5 +842,13 @@ textarea {
     to {
       transform: rotate(360deg);
     }
+  }
+
+  .link-container {
+    margin-top: 1rem;
+    width: 70%;
+    text-align: left;
+    margin-bottom: 0.3;
+   
   }
 }
